--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -19,15 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="SMain.cpp" />
+    <ClCompile Include="CMain.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{b06fc97f-7b73-479b-ba45-d7f7d04fbc67}</ProjectGuid>
-    <RootNamespace>ChatApplicationForSockectProgramming</RootNamespace>
+    <ProjectGuid>{86e3a57e-cca5-420a-b904-bd3422e8b45a}</ProjectGuid>
+    <RootNamespace>Client</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Server</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
