--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="SMain.cpp">
+    <ClCompile Include="CMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
